// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Basic Text Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Anniversary",
      "Sangeet",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "id": "cat:Anniversary",
        "score": 1.2,
        "title": "Anniversary",
        "type": "category",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a19cb169875c9a89386d920",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
        "price": 1500,
        "score": 1.4,
        "slug": "wooden-wedding-ring-tray",
        "title": "Wooden Wedding Ring Tray",
        "type": "product",
      },
      {
        "category": "Jewellery Trays",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
      {
        "category": "Coconut Decorations",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Budget Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Anniversary",
      "Sangeet",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "id": "cat:Anniversary",
        "score": 1.2,
        "title": "Anniversary",
        "type": "category",
      },
      {
        "category": "Coconut Decorations",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0.7,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
      {
        "category": "Traditional Wedding Decor",
        "id": "6a1c3fd6d5e8db93a79944bc",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
        "price": 2500,
        "score": 0.6,
        "slug": "beaded-heart-shaped-coconut",
        "title": "Beaded Heart Shaped Coconut",
        "type": "product",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "price": 2000,
        "score": 0,
        "slug": "floral-ring-tray",
        "title": "Floral Ring Tray",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Color + Tag Filter Search" 1`] = `
{
  "data": {
    "predictedCategories": [
      "Wedding",
      "Floral",
      "Stage",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "id": "cat:Floral",
        "score": 1.2,
        "title": "Floral",
        "type": "category",
      },
      {
        "id": "intent:Wedding Stage Decor",
        "score": 1.1,
        "title": "Wedding Stage Decor",
        "type": "suggestion",
      },
      {
        "id": "intent:Wedding Garlands",
        "score": 1.1,
        "title": "Wedding Garlands",
        "type": "suggestion",
      },
      {
        "id": "intent:Wedding Welcome Sign",
        "score": 1.1,
        "title": "Wedding Welcome Sign",
        "type": "suggestion",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Telugu Script Search" 1`] = `
{
  "data": {
    "correctedQuery": "wedding డెకరేషన్",
    "predictedCategories": [
      "Wedding",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "Jewellery Trays",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
      {
        "category": "Coconut Decorations",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a19cb169875c9a89386d920",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
        "price": 1500,
        "score": 0,
        "slug": "wooden-wedding-ring-tray",
        "title": "Wooden Wedding Ring Tray",
        "type": "product",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "price": 2000,
        "score": 0,
        "slug": "floral-ring-tray",
        "title": "Floral Ring Tray",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/search/autocomplete should perfectly match ranking & results for autocomplete: "Transliterated Telugu Search" 1`] = `
{
  "data": {
    "correctedQuery": "wedding decoration",
    "predictedCategories": [
      "Wedding",
    ],
    "suggestions": [
      {
        "id": "cat:Wedding",
        "score": 1.2,
        "title": "Wedding",
        "type": "category",
      },
      {
        "category": "Coconut Decorations",
        "id": "6a0c764b9b8633afb920deb4",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
        "price": 750,
        "score": 0.3,
        "slug": "green-coconut-decor",
        "title": "Green Coconut Decor",
        "type": "product",
      },
      {
        "category": "Jewellery Trays",
        "id": "6a0c74fa9b8633afb920de7b",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
        "price": 1500,
        "score": 0,
        "slug": "floral-jewelry-tray",
        "title": "Floral Jewelry Tray",
        "type": "product",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a19cb169875c9a89386d920",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
        "price": 1500,
        "score": 0,
        "slug": "wooden-wedding-ring-tray",
        "title": "Wooden Wedding Ring Tray",
        "type": "product",
      },
      {
        "category": "Engagement Ring Trays",
        "id": "6a0d5c8ec725a13dd9a95618",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024554/eventdecor_migration/z9ae90bxj0n3bflsiqod.jpg",
        "price": 2000,
        "score": 0,
        "slug": "floral-ring-tray",
        "title": "Floral Ring Tray",
        "type": "product",
      },
    ],
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Basic Text Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "wedding",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Budget Search" 1`] = `
{
  "data": {
    "expertResponse": "I've put together some beautiful wedding selections under ₹50,000 that fit your budget perfectly. Let me know if you would like to customize these!",
    "intentSummary": "Wedding under ₹50,000",
    "isFallback": false,
    "items": [
      {
        "category": "Traditional Wedding Decor",
        "id": "6a1c3fd6d5e8db93a79944bc",
        "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
        "matchSource": "fuzzy",
        "price": 2500,
        "rating": 0,
        "reviews": 0,
        "score": 0.6,
        "slug": "beaded-heart-shaped-coconut",
        "tags": [
          "heart shaped coconut",
          "beaded",
        ],
        "title": "Beaded Heart Shaped Coconut",
        "type": "product",
      },
    ],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "wedding decor under 50k",
    "recommendations": {
      "bestMatches": [
        {
          "category": "Traditional Wedding Decor",
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fuzzy",
          "price": 2500,
          "rating": 0,
          "reviews": 0,
          "score": 0.6,
          "slug": "beaded-heart-shaped-coconut",
          "tags": [
            "heart shaped coconut",
            "beaded",
          ],
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "budgetFriendly": [
        {
          "category": "Traditional Wedding Decor",
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fuzzy",
          "price": 2500,
          "rating": 0,
          "reviews": 0,
          "score": 0.6,
          "slug": "beaded-heart-shaped-coconut",
          "tags": [
            "heart shaped coconut",
            "beaded",
          ],
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "popularChoices": [
        {
          "category": "Traditional Wedding Decor",
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fuzzy",
          "price": 2500,
          "rating": 0,
          "reviews": 0,
          "score": 0.6,
          "slug": "beaded-heart-shaped-coconut",
          "tags": [
            "heart shaped coconut",
            "beaded",
          ],
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "similarIdeas": [
        {
          "category": "Traditional Wedding Decor",
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fuzzy",
          "price": 2500,
          "rating": 0,
          "reviews": 0,
          "score": 0.6,
          "slug": "beaded-heart-shaped-coconut",
          "tags": [
            "heart shaped coconut",
            "beaded",
          ],
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "trending": [
        {
          "category": "Traditional Wedding Decor",
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fuzzy",
          "price": 2500,
          "rating": 0,
          "reviews": 0,
          "score": 0.6,
          "slug": "beaded-heart-shaped-coconut",
          "tags": [
            "heart shaped coconut",
            "beaded",
          ],
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
    },
    "total": 1,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Color + Tag Filter Search" 1`] = `
{
  "data": {
    "expertResponse": "I couldn't find exact matches for your search "yellow flowers wedding stage". However, as an event planning expert, I have gathered some of our most popular items, new arrivals, and collections that you can check out!",
    "intentSummary": "Wedding Ideas",
    "isFallback": true,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [],
    "query": "yellow flowers wedding stage",
    "recommendations": {
      "bestMatches": [
        {
          "id": "6a0c74fa9b8633afb920de7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "floral-jewelry-tray",
          "title": "Floral Jewelry Tray",
          "type": "product",
        },
        {
          "id": "6a0c781bb048b5d5827cdf89",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024552/eventdecor_migration/zynacnozzbi26cdhk3yk.jpg",
          "matchSource": "fallback_popular",
          "price": 4000,
          "score": 1,
          "slug": "pooja-thambulam-set",
          "title": "Pearl Pooja Thambulam",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_popular",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fallback_popular",
          "price": 2500,
          "score": 1,
          "slug": "beaded-heart-shaped-coconut",
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "budgetFriendly": [
        {
          "id": "6a341c3615693d6710e78f7a",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781799718/siri-arts-crafts/products/pgndnrhojhzfzx28sjnz.jpg",
          "matchSource": "fallback_new",
          "price": 1999,
          "score": 1,
          "slug": "rose-chocolate-bouquet",
          "title": "Rose Chocolate Bouquet",
          "type": "product",
        },
        {
          "id": "6a275711dccad738269ad33e",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780963058/siri-arts-crafts/products/qzze8coxteocr9wzqbim.jpg",
          "matchSource": "fallback_new",
          "price": 2000,
          "score": 1,
          "slug": "ganesh-coconut-decor",
          "title": "Ganesh Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a19cb169875c9a89386d920",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
          "matchSource": "fallback_new",
          "price": 1500,
          "score": 1,
          "slug": "wooden-wedding-ring-tray",
          "title": "Wooden Wedding Ring Tray",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_new",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
      ],
      "popularChoices": [
        {
          "id": "6a0c75c89b8633afb920de8f",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024548/eventdecor_migration/qloanf6gi2facqdqvh0j.jpg",
          "matchSource": "fallback_popular",
          "price": 1999,
          "score": 1,
          "slug": "bangle-ceremony-tray",
          "title": "Bangle Ceremony Tray",
          "type": "product",
        },
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fallback_popular",
          "price": 900,
          "score": 1,
          "slug": "beaded-coconut-decor",
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a19cb169875c9a89386d920",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "wooden-wedding-ring-tray",
          "title": "Wooden Wedding Ring Tray",
          "type": "product",
        },
        {
          "id": "6a0c76cc9b8633afb920dec8",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024551/eventdecor_migration/s51hknxfe1h65exg9osn.jpg",
          "matchSource": "fallback_popular",
          "price": 1300,
          "score": 1,
          "slug": "jute-jewellery-cart",
          "title": "Jute Jewellery Cart",
          "type": "product",
        },
      ],
      "similarIdeas": [
        {
          "id": "6a0c74fa9b8633afb920de7b",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024546/eventdecor_migration/dakfqhkzlgqw5vjkfg6v.jpg",
          "matchSource": "fallback_popular",
          "price": 1500,
          "score": 1,
          "slug": "floral-jewelry-tray",
          "title": "Floral Jewelry Tray",
          "type": "product",
        },
        {
          "id": "6a0c781bb048b5d5827cdf89",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024552/eventdecor_migration/zynacnozzbi26cdhk3yk.jpg",
          "matchSource": "fallback_popular",
          "price": 4000,
          "score": 1,
          "slug": "pooja-thambulam-set",
          "title": "Pearl Pooja Thambulam",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_popular",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a1c3fd6d5e8db93a79944bc",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1780962210/siri-arts-crafts/products/cum5wuqalp5hq5ia0kuc.jpg",
          "matchSource": "fallback_popular",
          "price": 2500,
          "score": 1,
          "slug": "beaded-heart-shaped-coconut",
          "title": "Beaded Heart Shaped Coconut",
          "type": "product",
        },
      ],
      "trending": [
        {
          "id": "6a0c781bb048b5d5827cdf89",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024552/eventdecor_migration/zynacnozzbi26cdhk3yk.jpg",
          "matchSource": "fallback_new",
          "price": 4000,
          "score": 1,
          "slug": "pooja-thambulam-set",
          "title": "Pearl Pooja Thambulam",
          "type": "product",
        },
        {
          "id": "6a19cb169875c9a89386d920",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024558/eventdecor_migration/hgvuv234fqdoa2b05mul.jpg",
          "matchSource": "fallback_new",
          "price": 1500,
          "score": 1,
          "slug": "wooden-wedding-ring-tray",
          "title": "Wooden Wedding Ring Tray",
          "type": "product",
        },
        {
          "id": "6a0c764b9b8633afb920deb4",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024549/eventdecor_migration/os7ab4jtrh8y5vikq3z2.jpg",
          "matchSource": "fallback_new",
          "price": 750,
          "score": 1,
          "slug": "green-coconut-decor",
          "title": "Green Coconut Decor",
          "type": "product",
        },
        {
          "id": "6a11579708fa7569dfc015a0",
          "image": "https://res.cloudinary.com/drxgnnzeb/image/upload/v1781024555/eventdecor_migration/sxglj11lgi99fwxij9bp.jpg",
          "matchSource": "fallback_new",
          "price": 900,
          "score": 1,
          "slug": "beaded-coconut-decor",
          "title": "Beaded Coconut Decor",
          "type": "product",
        },
      ],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Telugu Script Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "పెళ్లి డెకరేషన్",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match ranking & results for full search: "Transliterated Telugu Search" 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning wedding decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Wedding Ideas",
    "isFallback": false,
    "items": [],
    "limit": 10,
    "page": 1,
    "predictedCategories": [
      "Wedding",
    ],
    "query": "pelli decoration",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;

exports[`Search Endpoints - Exact Ranking & Snapshot Validation GET /api/v1/search/results should perfectly match results when applying explicit filters (sort, categories) 1`] = `
{
  "data": {
    "expertResponse": "Here are some stunning traditional traditional decoration ideas for your ceremony. You can filter them by budget using the price controls.",
    "intentSummary": "Traditional Traditional Ideas",
    "isFallback": false,
    "items": [],
    "limit": 5,
    "page": 1,
    "predictedCategories": [
      "Traditional",
    ],
    "query": "traditional",
    "recommendations": {
      "bestMatches": [],
      "budgetFriendly": [],
      "popularChoices": [],
      "similarIdeas": [],
      "trending": [],
    },
    "total": 0,
  },
  "success": true,
}
`;
